<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FF1493">

    <!-- TextView untuk menampilkan hasil -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="36sp"
        android:gravity="end"
        android:background="#EFEFEF"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Grid Layout untuk tombol kalkulator -->
    <GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:rowCount="5"
        android:columnCount="4"
        app:layout_constraintTop_toBottomOf="@+id/tvResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Tambahkan tombol-tombol angka dan operasi -->
        <Button
            android:id="@+id/btn7"
            android:text="@string/number_1"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn8"
            android:text="@string/number_2"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn9"
            android:text="@string/number_3"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btnDivide"
            android:text="@string/divide"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />

        <Button
            android:id="@+id/btn4"
            android:text="@string/number_4"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn5"
            android:text="@string/number_5"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn6"
            android:text="@string/number_6"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btnMultiply"
            android:text="@string/multiply"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />

        <Button
            android:id="@+id/btn1"
            android:text="@string/number_7"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn2"
            android:text="@string/number_8"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btn3"
            android:text="@string/number_9"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btnMinus"
            android:text="@string/minus"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />

        <Button
            android:id="@+id/btn0"
            android:text="@string/number_0"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btnEqual"
            android:text="@string/equal"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />
        <Button
            android:id="@+id/btnPlus"
            android:text="@string/plus"
            android:layout_width="95dp"
            android:layout_height="150dp"
            android:backgroundTint="#FFC0CB" />

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
